--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,4 +5,5 @@
 @use "layout/home";
 
 @use "components/theme-toggle";
-@use "components/cards";
+@use "components/followers-card";
+@use "components/overview-card";
