Allow toggling between dark and light themes

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -10,6 +10,8 @@
 	--bg-card: hsl(227, 47%, 96%);
 	--bg-divider: hsl(230, 19%, 60%);
 	--bg-toggle: hsl(230, 22%, 74%);
+	--bg-toggle-dark: linear-gradient(225deg, #40DB82 0%, #388FE7 98.02%);
+	--bg-circle: hsl(0, 0%, 100%);
 
 	// Border Colors
 	--border-blue: hsl(208, 92%, 53%);
