--- a/scss/components/_overview-card.scss
+++ b/scss/components/_overview-card.scss
@@ -13,7 +13,7 @@
 	&__group {
 		display: flex;
 		justify-content: space-between;
-		align-items: end;
+		align-items: flex-end;
 	}
 
 	&__number {
