Complete styles for large screen devices

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,6 +8,7 @@
 	// Background Colors
 	--bg-body: hsl(0, 0%, 100%);
 	--bg-card: hsl(227, 47%, 96%);
+	--bg-card-hover: hsl(228, 33%, 91%);
 	--bg-divider: hsl(230, 19%, 60%);
 	--bg-toggle: hsl(230, 22%, 74%);
 	--bg-toggle-dark: linear-gradient(225deg, #40DB82 0%, #388FE7 98.02%);
