--- a/scss/utilities/_themes.scss
+++ b/scss/utilities/_themes.scss
@@ -6,6 +6,7 @@
 	// Background Colors
 	--bg-body: hsl(230, 17%, 14%);
 	--bg-card: hsl(228, 28%, 20%);
+	--bg-card-hover: hsl(228, 25%, 27%);
 	--bg-divider: hsl(228, 25%, 27%);
 	--bg-circle: hsl(228, 28%, 20%, 1);
 }
