--- a/scss/components/_overview-card.scss
+++ b/scss/components/_overview-card.scss
@@ -33,4 +33,11 @@
 	&__fail {
 		color: var(--text-accent-red);
 	}
+
+	&:hover {
+		@media (any-hover: hover) {
+			cursor: pointer;
+			background-color: var(--bg-card-hover);
+		}
+	}
 }
