--- a/scss/components/_followers-card.scss
+++ b/scss/components/_followers-card.scss
@@ -21,6 +21,23 @@
 		@include border-top-color(var(--border-red));
 	}
 
+	&--gradient {
+		position: relative;
+		overflow: hidden;
+
+		&::before {
+			position: absolute;
+			top: 0;
+			background: linear-gradient(225deg, #DF4896 0%, #EE877E 50.91%, #FDC366 100%);
+			content: "";
+			display: block;
+			width: 100%;
+			height: 4px;
+			border-top-left-radius: 5px;
+			border-top-right-radius: 5px;
+		}
+	}
+
 	&__group {
 		display: flex;
 		justify-content: center;
