--- a/scss/components/_theme-toggle.scss
+++ b/scss/components/_theme-toggle.scss
@@ -6,6 +6,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	gap: rem(12);
 }
 
 #checkbox {
@@ -33,10 +34,6 @@
 		top: 50%;
 		transform: translateY(-50%);
 		transition: .2s;
-	}
-
-	@media (any-hover: hover) {
-		cursor: pointer;
 	}
 }
 
