--- a/scss/utilities/_themes.scss
+++ b/scss/utilities/_themes.scss
@@ -1,3 +1,5 @@
+/*! purgecss start ignore */
+
 [data-theme="dark"] {
 	// Font Colors
 	--text-primary: hsl(228, 34%, 66%);
@@ -10,3 +12,5 @@
 	--bg-divider: hsl(228, 25%, 27%);
 	--bg-circle: hsl(228, 28%, 20%, 1);
 }
+
+/*! purgecss end ignore */
