--- a/scss/layout/_media-queries.scss
+++ b/scss/layout/_media-queries.scss
@@ -19,11 +19,11 @@
 	}
 
 	.headings {
-		margin-block-end: 0;
+		margin-bottom: 0;
 	}
 
 	.theme-toggle {
-		margin-block-start: 0;
+		margin-top: 0;
 	}
 
 	.main-heading {
